--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "gulp demo",
+    /*"start": "gulp demo",*/
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
